# mesh-client

./: .gitallowed  .gitdisallowed  .gitignore  .tool-versions  CHANGE-LOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASES.md  ca.key.pem  client.key.pem  dev-requirements.txt  docker-compose.yml  git-secrets  mesh-upload.py  mesh_client_test.py  mesh_endpoint_connectivity_test.py  pyproject.toml  server.cert.pem  setup.py  sonar-project.properties  test_chunk_retry_file  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: merge-develop.yml  merge-release.yml  pull-request.yml  python-package.yml  test-publish-2.yml  test-publish.yml
docker/squid/: Dockerfile  entrypoint.sh  squid.conf
java-mesh-client-helper-files/: keystore.jks  meshclient.cfg
mesh_client/: __init__.py  client.cert.pem  io_helpers.py  io_helpers_test.py  key_helper.py  mesh_auth.py  mock_server.py  nhs-dep-ca-bundle.pem  nhs-dev-ca-bundle.pem  nhs-digicert-ca-bundle.pem  nhs-ig-int-ca-bundle.pem  nhs-int-ca-bundle.pem  nhs-live-ca-bundle.pem  nhs-live-root-ca.pem  nhs-opt-ca-bundle.pem  nhs-train-ca-bundle.pem  server.key.pem  types.py
scripts/: check-secrets.sh  sonar_tests.py  wait-for-container.sh
scripts/hooks/: commit-msg.sh  pre-commit.sh
tests/: ca.cert.pem  helpers.py  io_helpers_test.py  io_helpers_tests.py  mailboxes.jsonl  mesh_chunk_retries_tests.py  mesh_client_test.py  mesh_client_tests.py  mesh_endpoint_connectivity_test.py  mesh_endpoint_connectivity_tests.py  mesh_noretry_send_chunk_tests.py  mesh_retry_send_chunk_tests.py  mesh_sandbox_test.py  mesh_sandbox_tests.py  mock_server.py  server.cert.pem  workflows.jsonl
